# UMG3.3

./: AmBe.txt  AmBe.txtgun.txt  CMakeLists.txt  Fission(100bin).txt  Fission(100bin).txtgun.txt  Fission.txt  Fission.txtgun.txt  NGspectra.txt  NGspectra.txtgun.txt  NGspectra_14.2.txt  NGspectra_14.2.txtgun.txt  NGspectra_14.7.txt  NGspectra_14.7.txtgun.txt  NGspectra_square.txt  NGspectra_square.txtgun.txt  NGspectra_square_2.txt  NGspectra_square_2.txtgun.txt  Resolution_test.txt  Resolution_test.txtgun.txt  Resolution_test_1.txt  Resolution_test_1.txtgun.txt  Resolution_test_2.txt  Resolution_test_2.txtgun.txt  Resolution_test_3.txt  Resolution_test_3.txtgun.txt  Resolution_test_4.txt  Resolution_test_4.txtgun.txt  Resolution_test_5.txt  Resolution_test_5.txtgun.txt  run.mac  run1.mac  run2.mac  run3.mac  run4.mac  run5.mac  vis.mac
include/: CommandMessenger.hh  DetGeometry.hh  EventAct.hh  PrimaryGen.hh  RunAct.hh
src/: CommandMessenger.cc  DetGeometry.cc  EventAct.cc  PrimaryGen.cc  RunAct.cc  StepAct.cc  loader.cc
